--- a/styles/global.css
+++ b/styles/global.css
@@ -37,3 +37,16 @@ a:hover{
 h1, h2, h3{
     font: inherit;
 }
+.container{
+    max-width: 1280px;
+    padding-inline: 32px;
+    margin-inline: auto;
+}
+
+.grid{
+    display: grid;
+}
+
+.grid-flow-col{
+    grid-auto-flow: column;
+}
