--- a/styles/global.css
+++ b/styles/global.css
@@ -49,7 +49,7 @@ img{
 }
 
 main{
-    margin-top: 40px;
+    margin-block: 40px;
     row-gap: 80px;
     column-gap: 32px;
     grid-template-columns: 2fr 1.4fr;
