--- a/styles/header.css
+++ b/styles/header.css
@@ -1,24 +1,32 @@
-#primary{
-    padding-block: 20px;
+#primary {
+  padding-block: 20px;
 
-    div{
-        display: flex;
-        align-items: center;
-        gap: 8px;
-    }
-    
-    div:nth-child(2){
-        margin-inline: auto;
-    }
+  div {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+  }
 
-    div:nth-child(3){
-      justify-self: end;
-    }
+  div:nth-child(2) {
+    margin-inline: auto;
+  }
+
+  div:nth-child(3) {
+    justify-self: end;
+  }
 }
 
-#secundary{
-    padding-block: 14px;
-    border: solid 1px var(--stroke-color);
-    border-inline: none;
-    justify-content: space-between;
+#secundary {
+  padding-block: 14px;
+  border: solid 1px var(--stroke-color);
+  border-inline: none;
+  justify-content: space-between;
+}
+
+@media only screen and (max-width: 800px) {
+  .menu {
+    grid-auto-flow: initial !important;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    row-gap: 16px;
+  }
 }
